--- a/frontend/src/components/CommentSection/ReplySection/Reply/Reply.scss
+++ b/frontend/src/components/CommentSection/ReplySection/Reply/Reply.scss
@@ -2,13 +2,8 @@
 
 .Reply {
 	width: 100%;
-	// border-bottom: 1px solid rgba(128, 128, 128, 0.301);
 	margin-bottom: 0rem;
-	// display: flex;
-	// padding-left: 3.125rem;
 	padding-left: 24px;
-	// border-left: 1px solid rgba(128, 128, 128, 0.301);
-	// background-color: orange;
 	position: relative;
 	&::before {
 		content: '';
@@ -53,7 +48,7 @@
 		justify-content: flex-end;
 		width: 100%;
 		button {
-			align-self: center;
+			// align-self: center;
 		}
 		.reply,
 		.delete,
@@ -64,6 +59,7 @@
 			font-weight: 600;
 			text-transform: capitalize;
 			cursor: pointer;
+			align-self: center;
 
 			&:hover {
 				opacity: 0.5;
@@ -105,6 +101,10 @@
 		}
 
 		&__userBar {
+			position: relative;
+			z-index: 20;
+
+			// User profile image
 			img.replyImg {
 				margin-right: 0.8rem;
 			}
@@ -116,23 +116,42 @@
 		&__buttons {
 			-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 			position: relative;
-			svg {
+			// z-index: 100;
+			.toggleDropdown {
 				color: $darkBlue1;
 				font-size: 1rem;
 				opacity: 0.9;
 				margin-left: 1rem;
+				position: relative;
+				z-index: 100;
+				&::before {
+					content: '';
+					position: absolute;
+					top: 0;
+					left: 0;
+					border-radius: 100vw;
+					background-color: orange;
+					height: 1rem;
+					width: 1rem;
+					display: none;
+				}
+
+				&.active {
+					display: block;
+				}
 			}
 			.dropdown {
 				box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
 				border-radius: 5px;
 				display: flex;
 				flex-direction: column;
-				z-index: 98;
+				z-index: 101;
 				position: absolute;
 				right: -1rem;
 				top: 2.425rem;
+				background-color: $white;
 				button {
-					padding: 0.5rem 1rem;
+					padding: 0.7rem 1rem;
 				}
 				button:first-of-type {
 					width: 100%;
