--- a/frontend/src/components/Modal/Modal.scss
+++ b/frontend/src/components/Modal/Modal.scss
@@ -45,6 +45,7 @@
 
 @media screen and (max-width: 768px) {
 	.Modal {
+		z-index: 101;
 		&__content {
 			padding: 0;
 			padding: 1.5rem;
